--- a/.env
+++ b/.env
@@ -14,3 +14,6 @@ REACT_APP_LOG_LEVEL=info
 
 # Define how long each screen should display for before switching
 REACT_APP_PAGE_DISPLAY_TIME_SEC=10
+
+# Define the build to run: web or display
+REACT_APP_BUILD_TARGET=display
