--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@dls-controls/cs-web-lib": "file:../cs-web-lib-0.1.2-npm.tgz",
+    "@dls-controls/cs-web-lib": "file:../cs-web-lib-0.1.5-npm.tgz",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -14,6 +14,11 @@
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.2",
     "bufferutil": "^4.0.6",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-unicorn": "^33.0.0",
+    "prettier": "^2.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.1.3",
@@ -27,7 +32,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint 'src/**/*.{ts,tsx}' --max-warnings=0",
+    "prettier-check": "prettier --check 'src/**/*.{ts,tsx}'",
+    "check-types": "tsc",
+    "all-checks": "npm run lint && npm run prettier-check && npm run check-types"
   },
   "eslintConfig": {
     "extends": [
@@ -46,5 +55,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "prettier": {
+    "trailingComma": "none",
+    "arrowParens": "avoid"
   }
 }
