--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@dls-controls/cs-web-lib": "file:../cs-web-lib-0.1.5-npm.tgz",
+    "@dls-controls/cs-web-lib": "^0.1.6",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
