--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "machine-status-app",
-  "version": "0.1.0",
+  "version": "0.2",
   "private": true,
   "dependencies": {
-    "@dls-controls/cs-web-lib": "^0.1.13",
+    "@dls-controls/cs-web-lib": "0.1.14",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
