--- a/public/config.json
+++ b/public/config.json
@@ -1,34 +1,34 @@
 {
   "screens" : [
     {
-      "filepath" : "/json/ms_day",
-      "url" : "/day",
-      "pagename" : "Day View",
-      "delayTime": 5
+      "redirect_url" : "/json/ms_day",
+      "display_url" : "/day",
+      "display_title" : "Day View",
+      "delay_seconds": 5
     },
     {
-      "filepath" : "/json/ms_week",
-      "url" : "/week",
-      "pagename" : "Week View",
-      "delayTime": 3
+      "redirect_url" : "/json/ms_week",
+      "display_url" : "/week",
+      "display_title" : "Week View",
+      "delay_seconds": 3
     },
     {
-      "filepath" : "/json/ms_fe1",
-      "url" : "/fe1",
-      "pagename" : "Front Ends",
-      "delayTime": 2
+      "redirect_url" : "/json/ms_fe1",
+      "display_url" : "/fe1",
+      "display_title" : "Front Ends",
+      "delay_seconds": 2
     },
     {
-      "filepath" : "/json/ms_fe2",
-      "url" : "/fe2",
-      "pagename" : "Front Ends",
-      "delayTime": 5
+      "redirect_url" : "/json/ms_fe2",
+      "display_url" : "/fe2",
+      "display_title" : "Front Ends",
+      "delay_seconds": 5
     },
     {
-      "filepath" : "/json/ms_message",
-      "url" : "/message",
-      "pagename" : "Operations Messages",
-      "delayTime": 2
+      "redirect_url" : "/json/ms_message",
+      "display_url" : "/message",
+      "display_title" : "Operations Messages",
+      "delay_seconds": 2
     }
   ]
 }
