--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^17.0.2",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.2",
+    "ajv": "^8.11.0",
     "bufferutil": "^4.0.6",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.20.0",
