--- a/.env
+++ b/.env
@@ -15,5 +15,5 @@ REACT_APP_LOG_LEVEL=info
 # Define screen cycling config file (json format)
 REACT_APP_CYCLE_CONFIG_FILE=config.json
 
-# Define the build to run: web or display
-REACT_APP_BUILD_TARGET=display
+# Define the build to run: public or screen
+REACT_APP_BUILD_TARGET=screen
