Port client to use vite and latest cs-web-lib version

--- a/.env
+++ b/.env
@@ -1,19 +1,19 @@
 # React app settings. Restart the process for changes to take effect.
 
 # Set to connect to a Coniql server.
-#REACT_APP_CONIQL_SOCKET=localhost:8080
-#REACT_APP_CONIQL_SSL=false
+VITE_CONIQL_SOCKET=localhost:8080
+VITE_CONIQL_SSL=false
 
 # Build information
-#REACT_APP_VERSION=<<development>>
-# REACT_APP_BUILD_TIME
+#VITE_VERSION=<<development>>
+# VITE_BUILD_TIME
 
-REACT_APP_PROFILER_ENABLED=false
-REACT_APP_THROTTLE_PERIOD=100
-REACT_APP_LOG_LEVEL=info
+VITE_PROFILER_ENABLED=false
+VITE_THROTTLE_PERIOD=100
+VITE_LOG_LEVEL=info
 
 # Define screen cycling config file (json format)
-REACT_APP_CYCLE_CONFIG_FILE=config.json
+VITE_CYCLE_CONFIG_FILE=config.json
 
 # Define the build to run: public or screen
-REACT_APP_BUILD_TARGET=screen
+VITE_BUILD_TARGET=public
