--- a/package.json
+++ b/package.json
@@ -3,37 +3,43 @@
   "version": "1.0.1",
   "private": true,
   "dependencies": {
-    "@dls-controls/cs-web-lib": "^0.2.3",
+    "@diamondlightsource/cs-web-lib": "^0.3.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.0",
-    "@types/node": "^16.11.19",
+    "@types/node": "^22.5.2",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.2",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.2",
+    "@vitejs/plugin-react": "^4.3.1",
     "ajv": "^8.11.0",
     "bufferutil": "^4.0.6",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.20.0",
-    "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-unicorn": "^33.0.0",
-    "prettier": "^2.2.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-import": "^2.30.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-unicorn": "^55.0.0",
+    "jsdom": "^25.0.0",
+    "prettier": "^3.3.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.3",
     "typescript": "^4.5.4",
     "utf-8-validate": "^5.0.8",
+    "vite": "^5.4.2",
+    "vite-plugin-eslint": "^1.8.1",
+    "vite-plugin-node-polyfills": "^0.22.0",
+    "vitest": "^2.0.5",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "vite",
+    "build": "vite build",
+    "test": "vitest",
+    "eject": "vite eject",
     "lint": "eslint 'src/**/*.{ts,tsx}' --max-warnings=0",
     "prettier-check": "prettier --check 'src/**/*.{ts,tsx}'",
     "check-types": "tsc",
@@ -60,5 +66,8 @@
   "prettier": {
     "trailingComma": "none",
     "arrowParens": "avoid"
+  },
+  "devDependencies": {
+    "vite-plugin-node-polyfills": "^0.22.0"
   }
 }
